# Numgine

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/core/: Layout.cpp  Layout.hpp  Theme.hpp
src/ui/: Editor.cpp  Editor.hpp  Launcher.cpp  Launcher.hpp
